fix: no fade-out of start screen on mobile

--- a/src/theme/scss/common/_scrollfade.scss
+++ b/src/theme/scss/common/_scrollfade.scss
@@ -7,8 +7,11 @@
 
 .scrollFade--hidden {
 	opacity: 0;
-	height: 0; 
 	pointer-events: none;
+
+	@include mobile {
+		opacity: 1;
+	}
 }
 
 .scrollFade--visible {
